# max-context-share

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json
example/2026-03-27_16-24-11-openclaw-context/: manifest.json
example/2026-03-27_16-24-11-openclaw-context/skills/bundled/coding-agent/: SKILL.md
example/2026-03-27_16-24-11-openclaw-context/skills/bundled/gh-issues/: SKILL.md
example/2026-03-27_16-24-11-openclaw-context/skills/bundled/max_skills/: README.md
example/2026-03-27_16-24-11-openclaw-context/skills/bundled/max_skills/tinker/: SKILL.md
example/2026-03-27_16-24-11-openclaw-context/skills/bundled/metaclaw/: SKILL.md
example/2026-03-27_16-24-11-openclaw-context/skills/bundled/metaclaw/references/: architecture.md
example/2026-03-27_16-24-11-openclaw-context/skills/bundled/openai-whisper-api/: SKILL.md
example/2026-03-27_16-24-11-openclaw-context/skills/bundled/session-logs/: SKILL.md
example/2026-03-27_16-24-11-openclaw-context/skills/workspace/habit-reminder/: SKILL.md
example/2026-03-27_16-24-11-openclaw-context/workspace/: USER.md
max-context-share-skill/: SKILL.md
max-context-share-skill/references/: cli-reference.md  troubleshooting.md
src/: cli.ts  config-fragment.ts  export.ts  import.ts  index.ts  manifest.ts  paths.ts
src/max_context_share/: __init__.py  cli.py  config_fragment.py  export_bundle.py  import_bundle.py  manifest.py  paths.py
tests/: __init__.py  test_cli.py  test_config_fragment.py  test_export.py  test_import.py  test_manifest.py  test_paths.py
(+6 files in other folders)
